# cmaking

./: CMakeLists.txt  License.txt  README.md
lib/: CMakeLists.txt  mysqrt.cpp  mysqrt.h
src/: TutorialConfig.h.in  source.cpp
